# mq

./: Cargo.toml  README.md  devenv.nix
src/: config.rs  events.rs  main.rs
src/mail/: mod.rs  preview.rs
src/ui/: mod.rs
