[package]
name = "mq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
html2text = "0.16.7"
mailparse = "0.16.1"
notmuch = "0.8.0"
open = "5.3.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
tui-input = "0.11"
